...
        Header(Icons.Outlined.CreditCard),
        Info(Icons.Outlined.Info),
        Edit(Icons.Outlined.Edit),
        Amount(Icons.Outlined.CurrencyRupee),
        Calendar(Icons.Outlined.CalendarToday),
        Folder(Icons.Outlined.Folder),
        Back(Icons.AutoMirrored.Outlined.ArrowBack),
        ExpandUp(Icons.Outlined.KeyboardArrowUp),
        ExpandDown(Icons.Outlined.KeyboardArrowDown),
    }
}

@Composable
...
